--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
+	<link href="trade.css" rel="stylesheet">
     <title>LesCouillesDalex.com</title>
 </head>
 
 <body id="page-top" class="index">
-    <h1>Les couilles d' Alex</h1>
+    <h1 style="text-align: center;">Les couilles d' Alex</h1>
 
-    <iframe src="https://web.sterlingtrader.com/PTS/LogOn?ReturnUrl=%2fUser%2fLogOff" width="800" height="800" frameborder="0"></iframe>
-
-<!-- <div style="border: 2px solid #D5CC5A; overflow: hidden; margin: 15px auto; max-width: 575px;">
-<iframe scrolling="no" src="http://tools.dimpost.com/proxy-server.html" style="border: 0px none; margin-left: -36px; height: 812px; margin-top: -486px; width: 650px;">
-</iframe>
-</div> -->
-
-    
+<!-- 	<div class="square"></div> -->
+	<div style="border: 2px solid #D5CC5A; overflow: hidden; margin: 15px auto">
+		<iframe scrolling="no" src="https://web.sterlingtrader.com/PTS/LogOn?ReturnUrl=%2fUser%2fLogOff" style="border: 0px none; height: 800px; margin-top: -88px; width: 100%;">
+		</iframe>
+	</div>
+<!-- 	<div class="square_1"></div>
+	<div class="square_lat1"></div>
+	<div class="square_lat2"></div> -->
 </body>
 
 </html>
